Simplify gradient with box-shadow. Prevents card from getting too dark.

--- a/client/src/result/collections/collectionTile.css
+++ b/client/src/result/collections/collectionTile.css
@@ -14,10 +14,10 @@ $cardWidth: 20em;
     width: 100%;
     height: 100%;
 
-    /border-left: 3px inset rgba(10,10,10,.9);
-    border-top: 3px inset rgba(10,10,10,.9);
-    border-bottom: 2px inset rgba(10,10,10,.9);
-    border-right: 2px inset rgba(10,10,10,.9);
+    border-left: 2px inset rgba(0,0,0,.9);
+    border-top: 3px inset rgba(0,0,0,.9);
+    border-bottom: 2px inset rgba(0,0,0,.9);
+    border-right: 2px inset rgba(0,0,0,.9);
 
     color: white;
     overflow: hidden;
@@ -30,12 +30,8 @@ $cardWidth: 20em;
     .overlay {
       width: 100%;
       height: 100%;
-      background: linear-gradient(rgba(10, 10, 10, 1), rgba(10, 10, 10, .5), rgba(10, 10, 10, .2), rgba(10, 10, 10, 0));
-    }
-    .overlay2 {
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to right, rgba(10, 10, 10, .8), rgba(10, 10, 10, .3), rgba(10, 10, 10, .1), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0), rgba(10, 10, 10, 0));
+      /*box-shadow: inset 1ex 3.5em 1em rgba(0,0,0,.8);*/
+      box-shadow: inset 1ex 5ex 1.5ex 1ex rgba(0,0,0,.8);
     }
     .mapContainer {
       position: relative;
